package com.example.order;

public interface OrderRepository {
    void save(Order order);
}
